# Cpp-OpenCV

./: CMakeLists.txt  main.cpp
